Try to fix accordion mobile issue

--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -184,6 +184,7 @@
     position: relative;
     font-size: 16px;
     font-weight: 600;
+    -webkit-appearance: none;
 
     &:after {
       position: absolute;
